docs/rollback/actipm-opportunity-listviews/before/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>EstadoDeNacimiento__c</fullName>
        <description>Campo integración SAP</description>
        <label>Estado de nacimiento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AGS</fullName>
                    <label>Aguascalientes</label>
                </value>
                <value>
                    <fullName>BC</fullName>
                    <label>Baja California</label>
                </value>
                <value>
                    <fullName>BCS</fullName>
                    <label>Baja California Sur</label>
                </value>
                <value>
                    <fullName>CMP</fullName>
                    <label>Campeche</label>
                </value>
                <value>
                    <fullName>CHS</fullName>
                    <label>Chiapas</label>
                </value>
                <value>
                    <fullName>CHI</fullName>
                    <label>Chihuahua</label>
                </value>
                <value>
                    <fullName>DF</fullName>
                    <label>Ciudad de México</label>
                </value>
                <value>
                    <fullName>COA</fullName>
                    <label>Coahuila</label>
                </value>
                <value>
                    <fullName>COL</fullName>
                    <label>Colima</label>
                </value>
                <value>
                    <fullName>DGO</fullName>
                    <label>Durango</label>
                </value>
                <value>
                    <fullName>GTO</fullName>
                    <label>Guanajuato</label>
                </value>
                <value>
                    <fullName>GRO</fullName>
                    <label>Guerrero</label>
                </value>
                <value>
                    <fullName>HGO</fullName>
                    <label>Hidalgo</label>
                </value>
                <value>
                    <fullName>JAL</fullName>
                    <label>Jalisco</label>
                </value>
                <value>
                    <fullName>MEX</fullName>
                    <label>México</label>
                </value>
                <value>
                    <fullName>MCH</fullName>
                    <label>Michoacán</label>
                </value>
                <value>
                    <fullName>MOR</fullName>
                    <label>Morelos</label>
                </value>
                <value>
                    <fullName>NAY</fullName>
                    <label>Nayarit</label>
                </value>
                <value>
                    <fullName>NL</fullName>
                    <label>Nuevo León</label>
                </value>
                <value>
                    <fullName>OAX</fullName>
                    <label>Oaxaca</label>
                </value>
                <value>
                    <fullName>PUE</fullName>
                    <label>Puebla</label>
                </value>
                <value>
                    <fullName>QRO</fullName>
                    <label>Querétaro</label>
                </value>
                <value>
                    <fullName>QR</fullName>
                    <label>Quintana Roo</label>
                </value>
                <value>
                    <fullName>SLP</fullName>
                    <label>San Luis Potosí</label>
                </value>
                <value>
                    <fullName>SIN</fullName>
                    <label>Sinaloa</label>
                </value>
                <value>
                    <fullName>SON</fullName>
                    <label>Sonora</label>
                </value>
                <value>
                    <fullName>TAB</fullName>
                    <label>Tabasco</label>
                </value>
                <value>
                    <fullName>TMS</fullName>
                    <label>Tamaulipas</label>
                </value>
                <value>
                    <fullName>TLX</fullName>
                    <label>Tlaxcala</label>
                </value>
                <value>
                    <fullName>VER</fullName>
                    <label>Veracruz</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estatus__c</fullName>
        <label>Estatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En espera de documentación</fullName>
                </value>
                <value>
                    <fullName>En proceso de seguros</fullName>
                </value>
                <value>
                    <fullName>Aprobado y emisión</fullName>
                </value>
                <value>
                    <fullName>Aprobado y cupón para fecha renovación</fullName>
                </value>
                <value>
                    <fullName>Falta de información</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>Cotización entregada</fullName>
                </value>
                <value>
                    <fullName>Cobro realizado</fullName>
                    <isActive>false</isActive>
                    <label>Cobro realizado</label>
                </value>
                <value>
                    <fullName>En proceso de cobro</fullName>
                    <isActive>false</isActive>
                    <label>En proceso de cobro</label>
                </value>
                <value>
                    <fullName>Otro</fullName>
                    <isActive>false</isActive>
                    <label>Otro</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EtapaOportunidad__c</fullName>
        <formula>TEXT(StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Etapa de la oportunidad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etapa_Funnel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Etapa Funnel</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etapas_Pipeline__c</fullName>
        <label>Etapas Pipeline</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E01: OPORTUNIDAD</fullName>
                </value>
                <value>
                    <fullName>E02: EN SEGUIMIENTO</fullName>
                </value>
                <value>
                    <fullName>E03: INFORMACIÓN PENDIENTE PARA COTIZAR</fullName>
                </value>
                <value>
                    <fullName>E04: EN COTIZACIÓN</fullName>
                </value>
                <value>
                    <fullName>E05: RECHAZADO</fullName>
                </value>
                <value>
                    <fullName>E06: INFORMACIÓN ADICIONAL</fullName>
                </value>
                <value>
                    <fullName>E07: COTIZACIÓN ENTREGADA</fullName>
                </value>
                <value>
                    <fullName>E08: REVIRE</fullName>
                </value>
                <value>
                    <fullName>E09: SOLICITUD CARTA COBERTURA</fullName>
                </value>
                <value>
                    <fullName>E10: INFORMACIÓN PENDIENTE PARA EMITIR</fullName>
                </value>
                <value>
                    <fullName>E11: EN EMISIÓN</fullName>
                </value>
                <value>
                    <fullName>E12: PERDIDA*</fullName>
                </value>
                <value>
                    <fullName>E13: EMITIDA POR PAGAR</fullName>
                </value>
                <value>
                    <fullName>E14: CANCELADA*</fullName>
                </value>
                <value>
                    <fullName>E15: PAGADO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etiqueta_Gestion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Etiqueta Gestión</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etiqueta_Monto__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Etiqueta Monto</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_Apellido_Materno_Asegurado__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Apellido Materno Asegurado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_Apellido_Materno__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Apellido Materno</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_Apellido_Paterno_Asegurado__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Apellido Paterno Asegurado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_Colonia__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Colonia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_Comision_Apertura__c</fullName>
        <label>Comisión de Apertura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F3_Consecutivo_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Consecutivo ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>F3_Credito_Relacionado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Crédito Relacionado</label>
        <referenceTo>Credito__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F3_Division__c</fullName>
        <formula>Owner.F3_Division__c</formula>
        <label>División</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>F3_Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Baja California</fullName>
                </value>
                <value>
                    <fullName>Baja California Sur</fullName>
                </value>
                <value>
                    <fullName>Campeche</fullName>
                </value>
                <value>
                    <fullName>Chiapas</fullName>
                </value>
                <value>
                    <fullName>Chihuahua</fullName>
                </value>
                <value>
                    <fullName>Ciudad de México</fullName>
                </value>
                <value>
                    <fullName>Coahuila</fullName>
                </value>
                <value>
                    <fullName>Colima</fullName>
                </value>
                <value>
                    <fullName>Durango</fullName>
                </value>
                <value>
                    <fullName>Guanajuato</fullName>
                </value>
                <value>
                    <fullName>Guerrero</fullName>
                </value>
                <value>
                    <fullName>Hidalgo</fullName>
                </value>
                <value>
                    <fullName>Jalisco</fullName>
                </value>
                <value>
                    <fullName>México</fullName>
                </value>
                <value>
                    <fullName>Michoacán</fullName>
                </value>
                <value>
                    <fullName>Morelos</fullName>
                </value>
                <value>
                    <fullName>Nayarit</fullName>
                </value>
                <value>
                    <fullName>Nuevo León</fullName>
                </value>
                <value>
                    <fullName>Oaxaca</fullName>
                </value>
                <value>
                    <fullName>Puebla</fullName>
                </value>
                <value>
                    <fullName>Querétaro</fullName>
                </value>
                <value>
                    <fullName>Quintana Roo</fullName>
                </value>
                <value>
                    <fullName>San Luis Potosí</fullName>
                </value>
                <value>
                    <fullName>Sinaloa</fullName>
                </value>
                <value>
                    <fullName>Sonora</fullName>
                </value>
                <value>
                    <fullName>Tabasco</fullName>
                </value>
                <value>
                    <fullName>Tamaulipas</fullName>
                </value>
                <value>
                    <fullName>Tlaxcala</fullName>
                </value>
                <value>
                    <fullName>Veracruz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F3_Frecuencia_pago_interes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Frecuencia de pago de interés</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_Garantia__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Garantía</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_Genero__c</fullName>
        <description>Campo integración SAP</description>
        <label>Género</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Masculino</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Femenino</label>
                </value>
                <value>
                    <fullName>Otro</fullName>
                    <isActive>false</isActive>
                    <label>Otro</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F3_Monto_Credito__c</fullName>
        <label>Monto de Crédito</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F3_Municipio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Municipio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_No_Poliza_Seguros__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>No. de Póliza de Seguros</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_Nombre_Asegurado__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre del Asegurado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_Numero_poliza_anterior__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Número de póliza anterior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_Plazo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plazo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_Primer_Deposito_Recibido__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primer Depósito Recibido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F3_RFC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RFC</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_Region__c</fullName>
        <formula>Owner.F3_Region__c</formula>
        <label>Región</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_Se_completaron_campos_mInimos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>¿Se completaron campos mínimos?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F3_Sucursal__c</fullName>
        <formula>Owner.F3_Sucursal__c</formula>
        <label>Sucursal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_Tasa_Interes__c</fullName>
        <label>Tasa de Interés</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F3_Telefono__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>F3_Unidad_de_Negocio_SAP__c</fullName>
        <formula>CASE(Unidad_de_Negocio__c, 
    &quot;1&quot;, &quot;999&quot;, 
    &quot;2&quot;, &quot;998&quot;,
    null
)</formula>
        <label>Unidad de Negocio SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3_consecutivoOpp__c</fullName>
        <displayFormat>CRMOP-{00000000}</displayFormat>
        <label>Consecutivo Oportunidad</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>F3_isCreatedInSAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Creado en SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FRM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FRM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FecFormalizacionValidacionOpp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Formalización y Validación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FecPresentacionofertaOpp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Presentación de oferta</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FechaContactoInicialOpp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Contacto Inicial</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FechaContactoOpp__c</fullName>
        <formula>DATEVALUE(Ultima_generacion_de_tarea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FechaContactoOpp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaEstimadaDeCierre__c</fullName>
        <description>Campo que viene de la conversión del Lead</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha estimada de cierre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaSolicitardocumentacionOpp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Solicitar documentación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_IdentificaciondeNecesidadesOpp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Identificación de Necesidades</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_Nacimiento_Asegurado__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Nacimiento Asegurado</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_Nacimiento_Cliente__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_contactacion__c</fullName>
        <description>Fecha de contacto con el cliente</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de contactación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_contacto__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de contacto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_seguimiento__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de seguimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Opportunities</relationshipLabel>
        <relationshipName>HouseholdOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Referrals</relationshipLabel>
        <relationshipName>OpportunityContactReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunityEmployeeReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finalise_insurance_registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>¿Tramite finalizado para el seguimiento?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Folio_Zurich__c</fullName>
        <description>Folio único autogenerado para identificar la oportunidad desde su apertura</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Folio Zurich</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GACLIENTID__c</fullName>
        <description>Creación de Campo Gclid para integración con google analitics, solicitado por marketing coporativo 09062022</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Campo para integración con google analitics</inlineHelpText>
        <label>GACLIENTID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GATRACKID__c</fullName>
        <description>Creación de Campo Gclid para integración con google analitics, solicitado por marketing coporativo 09062022</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Campo para integración con google analitics</inlineHelpText>
        <label>GATRACKID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAUSERID__c</fullName>
        <description>Creación de Campo Gclid para integración con google analitics, solicitado por marketing coporativo 09062022</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Texto de ayuda	Campo para integración con google analitics</inlineHelpText>
        <label>GAUSERID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>Campo personalizado para google ads</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giro__c</fullName>
        <label>Giro</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AGROINDUSTRIAL</fullName>
                </value>
                <value>
                    <fullName>ALIMENTOS Y BEDIDAS</fullName>
                </value>
                <value>
                    <fullName>COMERCIO</fullName>
                </value>
                <value>
                    <fullName>CONSTRUCCIÓN E INMOBILIARIA</fullName>
                </value>
                <value>
                    <fullName>CONSULTORIA</fullName>
                </value>
                <value>
                    <fullName>EDUCACIÓN</fullName>
                </value>
                <value>
                    <fullName>ENERGÍA</fullName>
                </value>
                <value>
                    <fullName>ENTRETENIMIENTO</fullName>
                </value>
                <value>
                    <fullName>FUNERARIOS</fullName>
                </value>
                <value>
                    <fullName>GOBIERNO</fullName>
                </value>
                <value>
                    <fullName>HOSPITALES</fullName>
                </value>
                <value>
                    <fullName>HOTELERIA</fullName>
                </value>
                <value>
                    <fullName>INDUSTRIAL</fullName>
                </value>
                <value>
                    <fullName>JOYERIAS</fullName>
                </value>
                <value>
                    <fullName>LABORATORIO DE ANALISIS AGRICO</fullName>
                </value>
                <value>
                    <fullName>LIMPIEZA</fullName>
                </value>
                <value>
                    <fullName>LOGISTICA Y TRANSPORTES</fullName>
                </value>
                <value>
                    <fullName>MANUFACTURA</fullName>
                </value>
                <value>
                    <fullName>PAPEL Y CARTON</fullName>
                </value>
                <value>
                    <fullName>PF</fullName>
                </value>
                <value>
                    <fullName>PLASTICO</fullName>
                </value>
                <value>
                    <fullName>PRODUCTOS Y SERVICIOS LACTEOS</fullName>
                </value>
                <value>
                    <fullName>RESTAURACIÓN</fullName>
                </value>
                <value>
                    <fullName>SALUD Y FARMA</fullName>
                </value>
                <value>
                    <fullName>SECTOR FINANCIERO</fullName>
                </value>
                <value>
                    <fullName>SERVICIOS AMBIENTALES Y TRATANTE DE RESIDUOS</fullName>
                </value>
                <value>
                    <fullName>SOPORTE DE SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>TECNOLOGIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Horario__c</fullName>
        <label>Horario</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>8:00am-12:00pm</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>12:00pm - 6:00pm</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>6:00pm - 8:00pm</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HrsContactoInicialCerradaGanada__c</fullName>
        <formula>( PatrimFechaCerradaGanada__c - FechaContactoInicialOpp__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hrs Contacto Inicial - Cerrada Ganada</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HrsContactoInicialCerradaPerdida__c</fullName>
        <formula>( Patrim_FechaCerradaPerdida__c - FechaContactoInicialOpp__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hrs Contacto Inicial - Cerrada Perdida</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HrsContactoInicialFormalizacion__c</fullName>
        <formula>( FecFormalizacionValidacionOpp__c - FechaContactoInicialOpp__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hrs Contacto Inicial - Formalización</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HrsContactoInicialIdentificar_Nec__c</fullName>
        <formula>(Fecha_IdentificaciondeNecesidadesOpp__c - 	FechaContactoInicialOpp__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hrs Contacto Inicial - Identificar Nec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HrsContactoInicialPresentacion__c</fullName>
        <formula>( FecPresentacionofertaOpp__c - FechaContactoInicialOpp__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hrs Contacto Inicial - Presentación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HrsContactoInicialRecalendarizacion__c</fullName>
        <formula>( PatrimFechaDeRecalendarizaci_n__c  - FechaContactoInicialOpp__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hrs Contacto Inicial - Recalendarización</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HrsContactoInicialSolicitar__c</fullName>
        <formula>( FechaSolicitardocumentacionOpp__c - FechaContactoInicialOpp__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hrs Contacto Inicial - Solicitar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_Oportunidad__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Oportunidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INE_bancas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Id_registro__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Id_registro</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importe_Proyectado__c</fullName>
        <label>Importe Proyectado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>